color and audio

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -40,4 +40,6 @@ $tabletBreakpoint: 1024px;
     --oag-colors-on-secondary: #fff;
     --oag-colors-pastel: #d1d191;
     --oag-colors-on-pastel: #333333;
+    --oag-colors-contrast: #ffcf24;
+    --oag-colors-on-contrast: #000000;
 }
