--- a/src/components/oag-cockpit/oag-cockpit.scss
+++ b/src/components/oag-cockpit/oag-cockpit.scss
@@ -2,6 +2,11 @@
     --cockpit-show-animation-duration: 300ms;
     --cockpit-hide-animation-duration: 300ms;
     --cockpit-padding: var(--default-layout-padding);
+    --cockpit-padding-header: calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-vertical))
+        calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-horizontal));
+    --cockpit-padding-footer: calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-vertical))
+        calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-horizontal));
+    --cockpit-border-bottom-header: 1px #f4f4f4 solid;
 
     --cockpit-sheet-modal-max-width: 640px;
     --cockpit-sheet-modal-top-border-radius: var(--default-radius);
@@ -28,7 +33,6 @@
 
     .modal {
         display: none;
-
         position: fixed;
         z-index: 1000;
         background-color: rgba(#fff, 1);
@@ -39,28 +43,28 @@
             flex-direction: row;
             width: 100%;
             height: 100%;
+            overflow: auto;
 
             .vertical-container {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                height: 100%;
-
-                .header,
-                .footer {
-                    padding: calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-vertical))
-                        calc(var(--cockpit-padding) + var(--default-cockpit-item-padding-horizontal));
-                }
+                overflow: auto;
 
                 .header {
-                    border-bottom: 1px #f4f4f4 solid;
+                    padding: var(--cockpit-padding-header);
+                    border-bottom: var(--cockpit-border-bottom-header);
                 }
 
+                .footer {
+                    padding: var(--cockpit-padding-footer);
+                }
                 .container {
                     display: flex;
                     flex-direction: column;
                     position: relative;
                     overflow: auto;
+                    flex: 1;
                     padding: var(--cockpit-padding);
                 }
             }
@@ -143,8 +147,8 @@
         border-top-left-radius: var(--cockpit-sheet-modal-top-border-radius);
         border-top-right-radius: var(--cockpit-sheet-modal-top-border-radius);
         height: auto;
-        overflow: hidden;
         transform: translate(-50%, 100%);
+        max-height: 95vh;
 
         .container {
             display: flex;
