--- a/src/components/oag-audio/oag-audio.scss
+++ b/src/components/oag-audio/oag-audio.scss
@@ -1,10 +1,16 @@
 :host {
     --border-radius: var(--default-radius, 0.4em);
-    --padding: var(--default-layout, 40px);
+    --padding: var(--default-layout-padding, 40px);
+    --play-button-size: 60px;
+    --play-button-icon-size: 20px;
+    --audio-background-color: #f4f4f4;
+    --duration-stroke-height: 4px;
+    --duration-default-color: #ccc;
+    --duration-progress-color: #444;
 
     display: flex;
     flex-direction: column;
-    background-color: #f4f4f4;
+    background-color: var(--audio-background-color);
     border-radius: var(--border-radius);
     padding: var(--padding);
     overflow: hidden;
@@ -56,13 +62,18 @@
             align-self: center;
 
             button {
-                width: 50px;
-                height: 50px;
+                width: var(--play-button-size);
+                height: var(--play-button-size);
                 display: inline-flex;
                 justify-content: center;
                 align-items: center;
                 padding: 0;
                 border-radius: 999em;
+
+                svg {
+                    width: var(--play-button-icon-size);
+                    height: var(--play-button-icon-size);
+                }
             }
         }
     }
@@ -81,11 +92,11 @@
 
         .duration {
             width: 100%;
-            height: 4px;
-            background-color: #ccc;
+            height: var(--duration-stroke-height);
+            background-color: var(--duration-default-color);
 
             .progress {
-                background-color: #444;
+                background-color: var(--duration-progress-color);
                 height: 100%;
                 width: 30%;
             }
@@ -93,8 +104,12 @@
     }
 }
 
-@media screen and (max-width: 599px) {
-    .audio {
+@media screen and (max-width: 699px) {
+    :host {
+        --play-button-size: 80px;
+        --play-button-icon-size: 32px;
+        --padding: 24px;
+
         .top {
             flex-direction: column;
         }
