--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -23,26 +23,21 @@
         font-weight: 500;
         color: inherit;
         text-decoration: none;
-        background-image: linear-gradient(90deg, var(--bg), var(--bg)),
-            linear-gradient(90deg, var(--underline-color), var(--underline-color));
-        background-size: var(--underline-block-width) var(--underline-width),
-            100% var(--underline-width);
+        background-image: linear-gradient(90deg, var(--bg), var(--bg)), linear-gradient(90deg, var(--underline-color), var(--underline-color));
+        background-size: var(--underline-block-width) var(--underline-width), 100% var(--underline-width);
         background-repeat: no-repeat;
         background-position-x: calc(var(--underline-block-width) * -1), 0;
         background-position-y: 100%;
         transition: background-position-x var(--underline-transition);
 
         &:hover {
-            background-image: linear-gradient(90deg, var(--bg), var(--bg)),
-                linear-gradient(90deg,
-                    var(--underline-color-hover),
-                    var(--underline-color-hover));
+            background-image: linear-gradient(90deg, var(--bg), var(--bg)), linear-gradient(90deg, var(--underline-color-hover), var(--underline-color-hover));
             background-position-x: calc(100% + var(--underline-block-width)), 0;
         }
     }
 
     q {
-        quotes: "»" "«";
+        quotes: '»' '«';
     }
 
     ul {
@@ -100,7 +95,6 @@
 }
 
 @mixin global-buttons {
-
     button,
     .button {
         --button-size: 1em;
@@ -179,4 +173,47 @@
     background-color: var(--background-color-hover);
     border-color: var(--border-color-hover);
     color: var(--text-color-hover);
+}
+
+@mixin global-table {
+    table {
+        box-sizing: border-box;
+        line-height: 1;
+        width: 100%;
+        border: 0;
+        border-collapse: collapse;
+
+        th,
+        td {
+            padding: 1em;
+            text-align: left;
+        }
+
+        th {
+            font-weight: 500;
+        }
+
+        thead,
+        tfoot {
+            tr {
+                background-color: #ddd;
+                th,
+                td {
+                    font-weight: 600;
+                }
+            }
+        }
+
+        tbody {
+            tr {
+                &:nth-child(odd) {
+                    background-color: #f8f8f8;
+                }
+
+                &:nth-child(even) {
+                    background-color: #f4f4f4;
+                }
+            }
+        }
+    }
 }
